# html-parser

./: .gitignore  Makefile  README.md  TestAutomationwithPython.md  pyproject.toml  pytest.ini
html_parser/: fetcher.py  main.py  parser.py
main/: fibo.py
tests/: fetcher_test.py  fibo_test.py  main_test.py  parser_test.py
